--- a/style.css
+++ b/style.css
@@ -1,43 +1,83 @@
-.page {
-    width: 80vw;
-    height: 80vh;
-    border: 1px solid red;
-    box-sizing: border-box;
-}
-
 nav ul li {
     display: inline;
 }
 
-#page1 {
-    background: red;
 
-    p {
-        display: inline-block;
+
+html {
+    background: url("./images/carpet.jpg");
+    background-repeat: repeat;
+    text-align: center;
+}
+
+body {
+    margin: 100px;
+    background: rgba(85, 85, 210, 0.8);
+}
+
+footer {
+    bottom: 10px;
+}
+#qrCode {
+    width: 10vw;
+}
+
+h1 {
+    font-family: Lexend;
+}
+
+h2 {
+    font-family: Lexend;
+}
+
+.page {
+    /* width: 10vh; height: 10vh; */
+    box-sizing: border-box;
+    margin: auto;
+
+    h6 {
+        font-family: Courier;
     }
 
+    p {
+        font-family: Delius;
+        max-width: 100%;
+    }
+}
+
+#page1 {
+    h6 {}
+    p {
+        display: inline;
+    }
     img {
-        display: inline-block;
+    height: 150px;
+    display: inline;
     }
 }
 
 #page2 {
-    background: green
+    h6 {}
+
+    p {}
+
+    img {}
 }
 
-#page3 {
-    background: blue
-}
+#page3 {}
+
+#page4 {}
+
+#page5 {}
 
 /*CSS for responsive menu*/
-#hamIcon {
+#navIcon {
     display: none;
 }
 
-footer {
-    h1 {
-        background: cyan;
-    }
+/*to unhide menu items*/
+.menuShow {
+    display: block;
 }
 
 @media (max-width:800px) {
@@ -48,7 +88,7 @@ footer {
     }
 
     /* unhide menu icon */
-    #hamIcon {
+    #navIcon {
         display: block;
     }
 
@@ -74,11 +114,203 @@ footer {
     /*append text 'mobile’ */
 }
 
-
-/*to unhide menu items*/
-.menuShow {
-    display: block;
+#drumset-info {
+    display: grid;
+    grid-template-rows: auto auto auto;
+    grid-template-columns: auto auto auto;
 }
+
+.info-drum {}
+
+#info-ride {
+    grid-column: 3;
+}
+
+
+/*Drum Minigame Section*/
+#start-minigame {
+    width: 20vh;
+    height: 5vw;
+}
+
+#note-game-screen {
+    background: url("./images/notation_map.png") 0 0 no-repeat;
+    border: 2px black solid;
+    width: 160px;
+    height: 160px;
+    position: absolute;
+    top: inherit 50%;
+    left: inherit 50%;
+}
+
+#drum-minigame {
+    position: relative;
+    margin: 0 auto;
+    width: 400px;
+    height: 300px;
+}
+
+.drum {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    outline: 1px black solid;
+    position: absolute;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("./images/drum_texture.png");
+    background-size: cover;
+    grid-row: span 1;
+    transform-origin: center;
+    z-index: 1;
+}
+
+.cymbal {
+    background: rgb(162, 151, 97);
+    z-index: 2;
+    background-image: url("./images/cymbal_texture.png");
+    background-size: cover;
+}
+
+#snare {
+    top: 150px;
+    left: 80px;
+}
+
+#high {
+    top: 65px;
+    left: 130px;
+    width: 80px;
+    height: 80px;
+}
+
+#mid {
+    top: 62px;
+    left: 215px;
+    width: 83px;
+    height: 83px;
+}
+
+#floor {
+    top: 150px;
+    left: 230px;
+}
+
+#kick {
+    top: 120px;
+    left: 160px;
+    width: 105px;
+    height: 90px;
+    background-image: url("./images/kick_texture.png");
+    z-index: 0;
+}
+
+#crash {
+    top: 30px;
+    left: 55px;
+    width: 95px;
+    height: 95px;
+}
+
+#hihat {
+    top: 120px;
+    left: 20px;
+    width: 80px;
+    height: 80px;
+}
+
+#ride {
+    top: 115px;
+    left: 285px;
+    width: 100px;
+    height: 100px;
+}
+
+@keyframes drumHit {
+    0% {
+        width: 95px;
+        height: 95px;
+    }
+
+    8% {
+        width: 105px;
+        height: 105px;
+    }
+
+    15% {
+        width: 100px;
+        height: 100px;
+    }
+
+    100% {
+        width: 90px;
+        height: 90px;
+    }
+}
+
+.drumHit {
+    animation: drumHit 0.2s linear;
+}
+
+@keyframes cymbalHit {
+    5% {
+        transform: rotateX(40deg) rotateY(0deg) rotateZ(0deg);
+    }
+
+    7% {
+        transform: rotateX(0deg) rotateY(40deg) rotateZ(0deg);
+    }
+
+    10% {
+        transform: rotateX(-40deg) rotateY(0deg) rotateZ(0deg);
+    }
+
+    14% {
+        transform: rotateX(0deg) rotateY(-40deg) rotateZ(0deg);
+    }
+
+    19% {
+        transform: rotateX(40deg) rotateY(0deg) rotateZ(0deg);
+    }
+
+    25% {
+        transform: rotateX(0deg) rotateY(40deg) rotateZ(0deg);
+    }
+
+    35% {
+        transform: rotateX(-40deg) rotateY(0deg) rotateZ(0deg);
+    }
+
+    47% {
+        transform: rotateX(0deg) rotateY(-40deg) rotateZ(0deg);
+    }
+
+    60% {
+        transform: rotateX(10deg) rotateY(-30deg) rotateZ(0deg);
+    }
+
+    74% {
+        transform: rotateX(20deg) rotateY(-20deg) rotateZ(0deg);
+    }
+
+    89% {
+        transform: rotateX(15deg) rotateY(-15deg) rotateZ(0deg);
+    }
+
+    94% {
+        transform: rotateX(5deg) rotateY(-5deg) rotateZ(0deg);
+    }
+
+    100% {
+        transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
+    }
+}
+
+.cymbalHit {
+    animation: cymbalHit 1.5s linear;
+}
+
 
 #ball {
     background: cyan;
@@ -92,51 +324,34 @@ footer {
     transition: 0.3s;
 }
 
-.drum {
-    /* animation: drumHit 0.8s ease-out; */
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    background: brown;
+
+/*Fonts*/
+@font-face {
+    font-family: 'Delius';
+    src: url(./fonts/Delius-Regular.ttf);
 }
 
-.cymbal {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    background: burlywood;
+@font-face {
+    font-family: 'Sour Gummy';
+    src: url(./fonts/SourGummy-VariableFont_wdth,wght.ttf);
 }
 
-@keyframes drumHit {
-    0% {
-        width: 105px;
-        height: 105px;
-    }
-
-    8% {
-        width: 110px;
-        height: 110px;
-    }
-
-    15% {
-        width: 105px;
-        height: 105px;
-    }
-
-    100% {
-        width: 90px;
-        height: 90px;
-    }
+@font-face {
+    font-family: 'Mistery Silent';
+    src: url(./fonts/Mistery-Silent.ttf);
 }
 
-.drum.drumHit {
-    animation: drumHit 0.5s;
+@font-face {
+    font-family: 'Lexend';
+    src: url(./fonts/Lexend-VariableFont_wght.ttf);
+}
+
+@font-face {
+    font-family: 'Merienda';
+    src: url(./fonts/Merienda-VariableFont_wght.ttf);
+}
+
+@font-face {
+    font-family: 'Valentine Cute';
+    src: url(./fonts/Valentine\ Cute.ttf);
 }
